# yolo8-cls_ort

./: .gitignore  CMakeLists.txt  yolo8-cls_ort.cpp  yolo8-cls_ort.h
.github/workflows/: cmake-multi-platform.yml
